style.css
*
{
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	box-sizing: border-box;
	font-size: 100%;
	vertical-align: baseline;
	background: transparent;
	cursor: default;
}
body
{
	font-family: 'Electrolize', 'Oswald', sans-serif;
	color: #fff;
	font-size: 16px;
	
	position: relative;
	overflow-x: hidden;
	
	-webkit-touch-callout: none; /* iOS Safari */
	-webkit-user-select: none;   /* Chrome/Safari/Opera */
	-khtml-user-select: none;    /* Konqueror */
	-moz-user-select: none;      /* Firefox */
	-ms-user-select: none;       /* Internet Explorer/Edge */
}
#container
{
	min-width: 1024px;
	max-width: 1920px;
}
body,
#curtain,
.veil,
.darkBlueBackground
{
	background-color: #09154f;
}
#curtain
{
	position: fixed;
	width: 100%;
	height: 1080px;
	z-index: 50;
	padding: 5px;
}
#curtain h1,
#curtain h2,
#curtain h3
{
	text-align: center;
}
#curtain h2,
#curtain h3
{
	font-family: 'Oswald', sans-serif;
}
#curtain h1 { font-size: 60px }
#curtain h2 { font-size: 26px }
#curtain h3 { font-size: 16px; font-weight: 400; }
.pinpointRect,
.infectionRateHighlight,
.outbreaksHighlight,
.autoTreatCircle,
.autoTreatCureMarker,
#quarantineArea
{
	pointer-events: none;
}

.pinpointRect
{
	position: absolute;
	z-index: 1;
	border: 2px solid red;
}
#boardImg, #boardContainer
{
	position: absolute;
	width: 80.5%;
}
#boardImg
{
	z-index: 0;
}
#boardContainer
{
	z-index: 1;
	font-size: 0;
	overflow: hidden;
}
#boardContainer > div,
#boardContainer > .pawn,
#boardContainer > .researchStation,
#boardContainer > .diseaseCube
{
	position: absolute;
}
#travelPathArrowContainer
{
	position: relative;
	z-index: 6;
	opacity: 0.7;
	filter: drop-shadow(0px 0px 3px #fff);
	pointer-events: none;
}
#boardContainer > .pawn
{
	z-index: 4;
	width: 1.6%;
}
.pawnArrow
{
	width: 3%;
	background-color: transparent;
	z-index: 7;
	pointer-events: none;
}
.pawnArrow.dispatch { width: 2% }
.pawnArrow > div
{
	width: 100%;
	height: 100%;
	clip-path: polygon(50% 30%, 100% 10%, 50% 100%, 0 10%);
}
.pawnArrow.dispatch > div { clip-path: polygon(50% 30%, 100% 10%, 50% 100%, 0 10%) }
.researchStation
{
	z-index: 3;
	width: 3%;
}
.researchStation img
{
	width: 100%;
	pointer-events: none;
}
.researchStation.relocatable
{
	cursor: pointer;
}
.grantStation
{
	z-index: 6;
	cursor: pointer;
}
.diseaseCube
{
	z-index: 5;
	background-color: transparent !important;
}
.cubeToRemove
{
	cursor: pointer;
	z-index: 6;
}
.diseaseCube *
{
	width: 100%;
	height: 100%;
	margin-bottom: -100%;
	pointer-events: none;
}
.cubeSlash, .cubeBackground { background: #fff }
.diseaseCube.y .cubeSlash, .diseaseCube.y .cubeBackground { background: #000 }
.cubeSlash { clip-path: polygon(6% 0, 0 6%, 45% 50%, 0 94%, 6% 100%, 50% 56%, 94% 100%, 100% 94%, 56% 50%, 100% 6%, 94% 0, 50% 44%) }
.cubeBackground { clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%) }
.cubeTop { clip-path: polygon(50% 4%, 94% 25%, 50% 48%, 6% 25%) }
.cubeLeft { clip-path: polygon(4% 74%, 48% 96%, 48% 52%, 4% 28%) }
.cubeRight { clip-path: polygon(96% 74%, 52% 96%, 52% 52%, 96% 28%) }

.diseaseCube.y .cubeTop,
.diseaseCube.y .cubeRight,
.diseaseCube.y .cubeLeft
{ background: #fded3c }
.yBorder { border: 2px solid #fded3c }
.diseaseCube.r .cubeTop,
.diseaseCube.r .cubeRight,
.diseaseCube.r .cubeLeft
{ background: #ef282a }
.rBorder { border: 2px solid #ef282a }
.diseaseCube.u .cubeTop,
.diseaseCube.u .cubeRight,
.diseaseCube.u .cubeLeft
{ background: #405fb1 }
.uBorder { border: 2px solid #405fb1 }
.diseaseCube.b .cubeTop,
.diseaseCube.b .cubeRight,
.diseaseCube.b .cubeLeft
{ background: #212121 }
.bBorder { border: 2px solid #000 }

.groupInfRate .diseaseCube
{
	vertical-align: middle;
	display: inline-block;
	width: 9%;
	margin-right: 4%;
}
.diseaseCube.w * { background-color: #fff }
.diseaseCube.w .cubeBackground { background-color: #000 }

.hidden{display:none;}
.y:not(.diseaseCube)
{
	background: linear-gradient(to right,
		#cab900,	
		#fded3c,
		#fded3c,
		#cab900);
	color:black;
}
.u:not(.diseaseCube)
{
	background: linear-gradient(to right,
		#3254af,	
		#405fb1,
		#405fb1,
		#3254af)
}
.b:not(.diseaseCube)
{
	background: linear-gradient(to right,
		#0e0e0e,	
		#212121,
		#212121,
		#0e0e0e)
}
.r:not(.diseaseCube):not(span)
{
	background: linear-gradient(to right,
		#b10e10,	
		#ef282a,
		#ef282a,
		#b10e10)
}
.white{background-color:#fff}
.black{background-color:#000}
.epidemic:not(.substep),
.epidemicFull
{
	background: linear-gradient(to right,
		#007738,	
		#00a94f,
		#00a94f,
		#007738)
}
.lightGreen { color: #00a94f }
.lightGreenBackground { background-color: #00a94f }
.darkGreenBorder { border: 2px solid #01863f }
.researchStationBackground { background-color: #e9cf94 }
span.r {color: #ef282a; background: none}
.eventCard,
.eventCardFull
{
	background: linear-gradient(30deg, 
		gray,
		#fff,
		gray,
		#fff,
		gray,
		#fff,
		gray,
		#fff,
		gray);
	color: #000;
}
.eventCard.unavailable:active { background: #8a181a }

#boardContainer > .eventCardFull
{
	width: 17%;
	padding-bottom: 3px;
	border-top-left-radius: 8px;
	border-bottom-right-radius: 8px;
	overflow: hidden;
}
.eventCardFull h5
{
	display: inline;
	font-size: 12px;
	font-weight: 400;
	padding: 5px 2px 2px 2px;
	background-color: #000;
	color: #fff;
	border-bottom-right-radius: 5px;
}
.eventCardFull h3 { margin-top: -2px; padding-bottom: 5px }
.eventCardFull img { border-top: 2px solid #000 }
.eventCardFull img,
.eventCardFull > p:first-of-type
{ border-bottom: 2px solid #000 }
.eventCardFull > p { padding: 2px 5px }
.eventCardFull > p:first-of-type
{
	background-color: #000;
	color: #fff;
	text-align: center;
	padding: 0;
	margin-bottom: 3px;
}
#disabledEventCard.tooltip { width: 300px }

.pawnArrow.airlift > div,
.airlift:not(.pawnArrow)
{
	background: linear-gradient(to bottom right, 
		#fff,
		gray,
		#fff,
		gray,
		#fff,
		gray,
		#fff,
		gray) !important
}

#topPanel,
.bottomPanelDiv:not(#cureMarkerContainer)
{
	position: absolute;
	background-color: #252525;
}
/* ... */

